--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Мій проєкт з Parcel 🚀</h1>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./index.js"></script>--..
 </body>
 </html>
