--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <title>Parcel Demo</title>
+  <title>Parcel App</title>
 </head>
 <body>
-  <h1>Мій проєкт з Parcel 🚀</h1>
-  <script type="module" src="./index.js"></script>
+  <h1 id="title"></h1>
+
+  <script src="./index.js" type="module"></script>
 </body>
 </html>
